--- a/index.html
+++ b/index.html
@@ -80,9 +80,13 @@
       }
     });
 
-    $('.todo-list').on('click', '.delete', function(e) {
-      e.preventDefault();
-      $(this).parent().remove();
+    $('.todo-list').on('click', '.complete', function(e) {
+      var li = $(this).parent();
+      if ($(this).is(':checked')) {
+        li.addClass('done');
+      } else {
+        li.removeClass('done');
+      }
     });
   </script>
 </body>
